// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram anchor 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram basic 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram color 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#7D4CDB"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram offset 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 6,6 Q 6,6 6,6 T 6,6"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 12,12 Q 12,12 12,12 T 12,12"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 24,24 Q 24,24 24,24 T 24,24"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram thickness 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="3"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="6"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="12"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="24"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="5"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram type 1`] = `
<div
  class="StyledGrommet-gKbdxL gbVYjJ"
>
  <div
    class="StyledStack-jtPAMP bgKQVO"
  >
    <div
      class="StyledStack__StyledStackLayer-cofHih lngCWV"
    >
      <div
        class="StyledBox-YaZNy htiNkm"
      >
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="1"
        />
        <div
          class="StyledBox-YaZNy eOYTpl"
          id="2"
        />
      </div>
    </div>
    <div
      class="StyledStack__StyledStackLayer-cofHih bMRXRQ"
    >
      <svg
        class="StyledDiagram-hhOVAv jyCpfr"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 L 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 L 0,0 L 0,0 L 0,0"
            fill="none"
            stroke="#FD6FFF"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
